@@ -36,19 +36,22 @@ Example::
 
    >>> import sched, time
    >>> s = sched.scheduler(time.time, time.sleep)
-   >>> def print_time(): print("From print_time", time.time())
+   >>> def print_time(a='default'):
+   ...     print("From print_time", time.time(), a)
    ...
    >>> def print_some_times():
    ...     print(time.time())
-   ...     s.enter(5, 1, print_time, ())
-   ...     s.enter(10, 1, print_time, ())
+   ...     s.enter(10, 1, print_time)
+   ...     s.enter(5, 2, print_time, argument=('positional',))
+   ...     s.enter(5, 1, print_time, kwargs={'a': 'keyword'})
    ...     s.run()
    ...     print(time.time())
    ...
    >>> print_some_times()
    930343690.257
-   From print_time 930343695.274
-   From print_time 930343700.273
+   From print_time 930343695.274 positional
+   From print_time 930343695.275 keyword
+   From print_time 930343700.273 default
    930343700.276
 
 .. _scheduler-objects:
@@ -59,7 +62,7 @@ Scheduler Objects
 :class:`scheduler` instances have the following methods and attributes:
 
 
-.. method:: scheduler.enterabs(time, priority, action, argument=[], kwargs={})
+.. method:: scheduler.enterabs(time, priority, action, argument=(), kwargs={})
 
    Schedule a new event. The *time* argument should be a numeric type compatible
    with the return value of the *timefunc* function passed  to the constructor.
@@ -67,8 +70,10 @@ Scheduler Objects
    *priority*.
 
    Executing the event means executing ``action(*argument, **kwargs)``.
-   *argument* must be a sequence holding the parameters for *action*.
-   *kwargs* must be a dictionary holding the keyword parameters for *action*.
+   Optional *argument* argument must be a sequence holding the parameters
+   for *action* if any used.
+   Optional *kwargs* argument must be a dictionary holding the keyword
+   parameters for *action* if any used.
 
    Return value is an event which may be used for later cancellation of the event
    (see :meth:`cancel`).
@@ -80,7 +85,7 @@ Scheduler Objects
       *kwargs* parameter was added.
 
 
-.. method:: scheduler.enter(delay, priority, action, argument=[], kwargs={})
+.. method:: scheduler.enter(delay, priority, action, argument=(), kwargs={})
 
    Schedule an event for *delay* more time units. Other than the relative time, the
    other arguments, the effect and the return value are the same as those for
